<resources>
    <string name="app_name">Accessible Currency</string>
    <string name="start">Start</string>
    <string name="loading">Loading...</string>
    <string name="camera_instructions">Touch the screen to identify the currency at the camera</string>
    <string name="object_not_found">Object not found.</string>
    <string name="this_is_a">This is a</string>
    <string name="about_content">This project aims to provide a tool for BLV people to improve their interaction with currency via a mobile app in multiple languages.\n\nBlind and vision-impaired people can use this app as a tool to identify and manage the amount of cash they have in their pocket.</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="flashlight">Flashlight</string>
    <string name="wallet">Wallet</string>
    <string name="select_the_language">Select the language</string>
    <string name="language_changed">Language changed, please restart the app.</string>
    <string name="restart_wallet">Restart wallet</string>
    <string name="wallet_enabled">Wallet enabled</string>
    <string name="total_amount">Your wallet has $%.02f  dollars</string>


    <!-- Currency Values from ML model -->
    <string name="one_cent_us">one US cent</string>
    <string name="five_cent_us">five cents coin</string>
    <string name="ten_cent_us">ten cents coin</string>
    <string name="twenty_five_cent_us">twenty cents coin</string>
    <string name="fifty_cent_us">fifty cents coin</string>
    <string name="one_dollar_us">one US dollar</string>
    <string name="two_dollar_us">two US dollars bill</string>
    <string name="five_dollar_us">five US dollars bill</string>
    <string name="ten_dollar_us">ten US dollars bill</string>
    <string name="twenty_dollar_us">twenty US dollars bill</string>
    <string name="fifty_dollar_us">fifty US dollars bill</string>
    <string name="one_hundred_us">one hundred US dollars bill</string>
    <string name="one_pound_egypt">one Egyptian pound bill</string>
    <string name="ten_euro">ten Euro bill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>