<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RecognitionActivity">

    <Button
        android:id="@+id/restartWalletButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ac_dark_blue"
        android:text="@string/restart_wallet"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cameraCaptureTextview" />

    <TextView
        android:id="@+id/totalAmountDue"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="@color/white"
        android:contentDescription=""
        android:elevation="2dp"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:text="@string/wallet_enabled"
        android:textColor="@color/ac_dark_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/restartWalletButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="The amount in your wallet is $20 USD dollars" />

    <TextView
        android:id="@+id/cameraCaptureTextview"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/white"
        android:contentDescription=""
        android:elevation="2dp"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:text="@string/camera_instructions"
        android:textColor="@color/ac_dark_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="This is one dollar bill" />

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/cameraCaptureTextview"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>


